--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+certifi==2020.12.5
 click==7.1.2
+cloudinary==1.24.0
+dnspython==2.1.0
+email-validator==1.1.2
 Flask==1.1.2
+Flask-Login==0.5.0
+flask-mongoengine==1.0.0
+Flask-WTF==0.14.3
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+mongoengine==0.22.1
+pymongo==3.11.3
 python-dotenv==0.15.0
+six==1.15.0
+urllib3==1.26.3
 Werkzeug==1.0.1
+WTForms==2.3.3
