--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+blinker==1.4
 certifi==2020.12.5
+cffi==1.14.5
 click==7.1.2
 cloudinary==1.24.0
+cryptography==3.4.6
 dnspython==2.1.0
 email-validator==1.1.2
 Flask==1.1.2
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 flask-mongoengine==1.0.0
 Flask-WTF==0.14.3
 idna==3.1
@@ -12,6 +16,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 mongoengine==0.22.1
+pycparser==2.20
+PyJWT==2.0.1
 pymongo==3.11.3
 python-dotenv==0.15.0
 six==1.15.0
