--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 flask-mongoengine==1.0.0
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
