set css filename to output.css [cache reset]

--- a/hot_dogz/static/package.json
+++ b/hot_dogz/static/package.json
@@ -4,8 +4,8 @@
   "description": "A dog photo sharing app built with Flask",
   "main": "index.js",
   "scripts": {
-    "build:css": "postcss css/app.css -o css/compiled.css",
-    "watch:css": "postcss css/app.css -o css/compiled.css --watch"
+    "build:css": "postcss css/app.css -o css/output.css",
+    "watch:css": "postcss css/app.css -o css/output.css --watch"
   },
   "repository": {
     "type": "git",
